virtual and mailbox transport is required for local mailbox delivery

--- a/roles/postfix.server/tasks/main.yml
+++ b/roles/postfix.server/tasks/main.yml
@@ -33,6 +33,8 @@
       maximal_queue_lifetime: 1d
       message_size_limit: 25480000
       qmgr_fudge_factor: 100
+      virtual_transport: "{{ postfix_virtual_transport }}"
+      mailbox_transport: "{{ postfix_virtual_transport }}"
       transport_maps: hash:/etc/postfix/transport
       smtpd_sasl_type: dovecot
       smtpd_sasl_path: private/auth
