Sanitize the item name

--- a/roles/postfix.server/tasks/main.yml
+++ b/roles/postfix.server/tasks/main.yml
@@ -128,8 +128,8 @@
 
 - name: Land Postfix transport maps
   template:
-    src: "{{ item }}.j2"
-    dest: "/etc/postfix/{{ item }}"
+    src: "{{ item.split('/')[-1] }}.j2"
+    dest: "/etc/postfix/{{ item.split('/')[-1] }}"
     owner: root
     group: root
     mode: 0644
