Files matching this pattern are managed via a separate script

--- a/roles/postfix.server/tasks/main.yml
+++ b/roles/postfix.server/tasks/main.yml
@@ -123,6 +123,8 @@
   notify:
     - Postmap virtual aliases file
     - Reload Postfix
+  when:
+    - "'/etc/gnome.org' not in item"
   tags: postmap
 
 - name: Land Postfix aliases
