rspamd: Skip some checks for authenticated users

--- a/roles/rspamd/files/local.d/settings.conf
+++ b/roles/rspamd/files/local.d/settings.conf
@@ -4,3 +4,11 @@ trusted {
   want_spam = yes;
 }
 
+authenticated {
+  priority = high;
+  authenticated = yes;
+  apply {
+    groups_disabled = ["rbl", "spf"];
+    symbols_dislabed = ["BAYES_SPAM", "NEURAL_SPAM", "PHISHING"];
+  }
+}
