rspamd: Fix typo

--- a/roles/rspamd/files/local.d/settings.conf
+++ b/roles/rspamd/files/local.d/settings.conf
@@ -9,6 +9,6 @@ authenticated {
   authenticated = yes;
   apply {
     groups_disabled = ["rbl", "spf"];
-    symbols_dislabed = ["BAYES_SPAM", "NEURAL_SPAM", "PHISHING"];
+    symbols_disabled = ["BAYES_SPAM", "NEURAL_SPAM", "PHISHING"];
   }
 }
