rspamd: Add reputation config

--- a/roles/rspamd/files/local.d/groups.conf
+++ b/roles/rspamd/files/local.d/groups.conf
@@ -20,5 +20,20 @@ group "abusix" {
       score = 6.5;
       description = "Domain listed in the Abusix Mail Intelligence Black list";
     }
+    "IP_REPUTATION_HAM" {
+      weight = 1.0;
+    }
+    "IP_REPUTATION_SPAM" {
+      weight = 4.0;
+    }
+    "DKIM_REPUTATION" {
+      weight = 1.0;
+    }
+    "SPF_REPUTATION_HAM" {
+      weight = 1.0;
+    }
+    "SPF_REPUTATION_SPAM" {
+      weight = 2.0;
+    }
   }
 }
