rspamd: Fix redis configuration for reputation module

--- a/roles/rspamd/files/local.d/reputation.conf
+++ b/roles/rspamd/files/local.d/reputation.conf
@@ -3,7 +3,7 @@ rules {
     selector "ip" {
     }
     backend "redis" {
-      servers = "localhost";
+      servers = "127.0.0.1:6379";
     }
     symbol = "IP_REPUTATION";
   }
@@ -11,7 +11,7 @@ rules {
     selector "spf" {
     }
     backend "redis" {
-      servers = "localhost";
+      servers = "127.0.0.1:6379";
     }
     symbol = "SPF_REPUTATION";
   }
@@ -19,7 +19,7 @@ rules {
     selector "dkim" {
     }
     backend "redis" {
-      servers = "localhost";
+      servers = "127.0.0.1:6379";
     }
     symbol = "DKIM_REPUTATION";
   }
