--- a/roles/rspamd/files/local.d/groups.conf
+++ b/roles/rspamd/files/local.d/groups.conf
@@ -1,5 +1,8 @@
 group "abusix" {
   symbols = {
+    "BAYES_SPAM" {
+       score = 2;
+    }
     "RBL_AMI_BLACK_RCVD" {
        score = 3.0;
        description = "Received from a host in the Abusix Mail Intelligence Black list";
