--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,6 @@ roles_path = roles
 vault_password_file = misc/get-vault-pass.sh
 vault_identity_list = lorry@./misc/lorry-vault-password.gpg
 collections_paths = ./collections/ansible_collections
+
+[privilege_escalation]
+become = True
