--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -1,131 +1,8 @@
 ---
-- name: put selinux in permissive mode
-  ansible.posix.selinux:
-    policy: targeted
-    state: permissive
-  when: ansible_distribution == "Fedora"
+- name: include common tasks
+  ansible.builtin.include: common.yml
+  when: ansible_distribution != "NixOS"
 
-- name: install podman
-  ansible.builtin.package:
-    name:
-      - podman
-      - podman-docker
-      - fuse-overlayfs
-      - slirp4netns
-      - systemd-container
-    state: present
-    update_cache: true
-
-- name: create podman user
-  ansible.builtin.user:
-    name: podman
-    shell: /bin/bash
-    system: true
-  register: podman_user
-
-- name: configure subuids and subguids for podman user
-  ansible.builtin.lineinfile:
-    path: "{{ item }}"
-    regexp: '^podman'
-    line: podman:524288:65536
-  with_items:
-    - /etc/subgid
-    - /etc/subuid
-
-- name: enable linger for podman
-  ansible.builtin.command: loginctl enable-linger podman
-  args:
-    creates: /var/lib/systemd/linger/podman
-
-- name: start podman socket and auto-update timer
-  ansible.builtin.systemd:
-    name: "{{ item }}"
-    state: started
-    enabled: true
-    scope: user
-  become_user: podman
-  with_items:
-    - podman.socket
-    - podman-auto-update.timer
-
-- name: configure selinux modules
-  include_tasks: selinux.yml
-  loop:
-    - pydocuum
-    - flatpak
-    - podman
-  when: ansible_distribution == "Fedora"
-
-- name: create podman config directory
-  ansible.builtin.file:
-    path: "{{ podman_user.home }}/.config/containers"
-    state: directory
-    mode: '0700'
-  become_user: podman
-
-- name: configure podman
-  ansible.builtin.copy:
-    src: containers.conf
-    dest: "{{ podman_user.home }}/.config/containers/containers.conf"
-  become_user: podman
-
-- name: create gitlab-runner config directory
-  ansible.builtin.file:
-    path: "{{ podman_user.home }}/gitlab-runner"
-    state: directory
-    mode: '0700'
-  become_user: podman
-
-- name: configure gitlab-runner
-  ansible.builtin.template:
-    src: gitlab-runner-config.toml.j2
-    dest: "{{ podman_user.home }}/gitlab-runner/config.toml"
-    mode: '0600'
-  become_user: podman
-
-- name: copy seccomp profile for building flatpaks
-  ansible.builtin.copy:
-    src: flatpak.seccomp.json
-    dest: "{{ podman_user.home }}/gitlab-runner/flatpak.seccomp.json"
-  become_user: podman
-
-- name: add unit for gitlab-runner service
-  ansible.builtin.template:
-    src: gitlab-runner.service.j2
-    dest: /{{ podman_user.home }}/.config/systemd/user/gitlab-runner.service
-  become_user: podman
-  notify: restart gitlab-runner
-
-- name: start gitlab-runner
-  ansible.builtin.systemd:
-    name: gitlab-runner.service
-    state: started
-    enabled: true
-    daemon_reload: true
-    scope: user
-  become_user: podman
-
-- name: add unit for pydocuum service
-  ansible.builtin.template:
-    src: pydocuum.service.j2
-    dest: /{{ podman_user.home }}/.config/systemd/user/pydocuum.service
-  become_user: podman
-  notify: restart pydocuum
-
-- name: start pydocuum
-  ansible.builtin.systemd:
-    name: pydocuum.service
-    state: started
-    enabled: true
-    daemon_reload: true
-    scope: user
-  become_user: podman
-
-- name: relax /dev/kvm permissions
-  ansible.builtin.copy:
-    src: 00-kvm.rules
-    dest: /etc/udev/rules.d/00-kvm.rules
-    mode: 0644
-    owner: root
-    group: root
-  notify: reload udevadm
+- name: include nixos tasks
+  ansible.builtin.include: nixos.yml
+  when: ansible_distribution == "NixOS"
