--- a/roles/flat-manager/files/flat-manager.gnome.org.conf
+++ b/roles/flat-manager/files/flat-manager.gnome.org.conf
@@ -53,8 +53,11 @@ server {
         add_header Vary Accept-Encoding;
     }
 
-    location = / {
-        return 302 https://wiki.gnome.org/Apps/Nightly;
+    location / {
+        proxy_set_header Host teams.pages.gitlab.gnome.org;
+        proxy_set_header X-Forwarded-Host "";
+        proxy_redirect //teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/ https://nightly.gnome.org/;
+        proxy_pass https://teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/;
     }
 
     location ~ ^/repo/objects/.+\.(commit|dirtree|filez)$ {
