--- a/roles/flat-manager/files/flat-manager.gnome.org.conf
+++ b/roles/flat-manager/files/flat-manager.gnome.org.conf
@@ -53,11 +53,18 @@ server {
         add_header Vary Accept-Encoding;
     }
 
-    location / {
+    location = / {
         proxy_set_header Host teams.pages.gitlab.gnome.org;
         proxy_set_header X-Forwarded-Host "";
         proxy_redirect //teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/ https://nightly.gnome.org/;
         proxy_pass https://teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/;
+    }
+
+    location = /assets {
+        proxy_set_header Host teams.pages.gitlab.gnome.org;
+        proxy_set_header X-Forwarded-Host "";
+        proxy_redirect //teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/assets https://nightly.gnome.org/assets;
+        proxy_pass https://teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/assets;
     }
 
     location ~ ^/repo/objects/.+\.(commit|dirtree|filez)$ {
