Match anything /assets

--- a/roles/flat-manager/files/flat-manager.gnome.org.conf
+++ b/roles/flat-manager/files/flat-manager.gnome.org.conf
@@ -60,7 +60,7 @@ server {
         proxy_pass https://teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/;
     }
 
-    location = /assets {
+    location /assets {
         proxy_set_header Host teams.pages.gitlab.gnome.org;
         proxy_set_header X-Forwarded-Host "";
         proxy_redirect //teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/assets https://nightly.gnome.org/assets;
