--- a/roles/rspamd/files/local.d/classifier-bayes.conf
+++ b/roles/rspamd/files/local.d/classifier-bayes.conf
@@ -1,1 +1,8 @@
-autolearn = false
+autolearn = true
+autolearn {
+    spam_threshold = 12.0;
+    junk_threshold = 9.0;
+    ham_threshold = -0.5;
+    check_balance = true;
+    min_balance = 0.9;
+}
