Enable feeding server name through SNI for nightly.g.o reverse proxy (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1390)

--- a/roles/flat-manager/files/flat-manager.gnome.org.conf
+++ b/roles/flat-manager/files/flat-manager.gnome.org.conf
@@ -58,6 +58,7 @@ server {
         proxy_set_header X-Forwarded-Host "";
         proxy_redirect //teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/ https://nightly.gnome.org/;
         proxy_pass https://teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/;
+        proxy_ssl_server_name on;
     }
 
     location /assets {
@@ -65,6 +66,7 @@ server {
         proxy_set_header X-Forwarded-Host "";
         proxy_redirect //teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/assets https://nightly.gnome.org/assets;
         proxy_pass https://teams.pages.gitlab.gnome.org/Websites/nightly.gnome.org/assets;
+        proxy_ssl_server_name on;
     }
 
     location ~ ^/repo/objects/.+\.(commit|dirtree|filez)$ {
