nis_enabled to on for rsyslog to connect to port 1514

--- a/roles/rsyslog/tasks/configure_client.yml
+++ b/roles/rsyslog/tasks/configure_client.yml
@@ -9,6 +9,12 @@
     name: audispd-plugins
     state: present
 
+- name: Set nis_enabled to on
+  ansible.posix.seboolean:
+    name: nis_enabled
+    state: present
+    persistent: true
+
 - name: Make sure auditd logs are forwarded
   lineinfile:
     path: /etc/audit/plugins.d/syslog.conf
