Upgrade node-exporter+prometheus, include AWS nodes

--- a/roles/prometheus/defaults/main.yml
+++ b/roles/prometheus/defaults/main.yml
@@ -1,11 +1,12 @@
 ---
-prometheus_version: 2.25.0
-prometheus_checksum: sha256:d163e41c56197425405e836222721ace8def3f120689fe352725fe5e3ba1a69d
+prometheus_version: 2.55.0
+prometheus_checksum: sha256:7a6b6d5ea003e8d59def294392c64e28338da627bf760cf268e788d6a8832a23
 prometheus_db_dir: /var/lib/prometheus
 prometheus_config_dir: /etc/prometheus
 prometheus_retention_time: "90d"
 prometheus_node_hostgroups:
   - ral3_rhel8
   - osuosl
+  - aws
 prometheus_blackbox_version: 0.22.0
 prometheus_blackbox_checksum: sha256:9dbdb51187d9f4ad93b18199414f845a2b8ac5139861bb4d1e037dabd91aac24
